modified Dockerfiles and automation scripts

--- a/DockerBuild/nginx/Dockerfile
+++ b/DockerBuild/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM theb0ys/base:latest
 
-# Install TAYGA (NAT64 gateway)
+# Install nginx
 RUN apt-get update && \
     apt-get install -y nginx && \
     apt-get clean && \
