--- a/DockerBuild/nat64/Dockerfile
+++ b/DockerBuild/nat64/Dockerfile
@@ -1,9 +1,7 @@
 FROM theb0ys/base:latest
 
-# Install TAYGA (NAT64 gateway)
+# Install TAYGA (NAT64 gateway) and nginx-extras (for vnc 5900)
 RUN apt-get update && \
     apt-get install -y tayga nginx nginx-extras && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-
-# nginx-extras add module stream for vnc 5900
