--- a/DockerBuild/suricata/Dockerfile
+++ b/DockerBuild/suricata/Dockerfile
@@ -1,11 +1,24 @@
 FROM theb0ys/base:latest
 
-# Install -..-
+# Install Suricata, Apache and PHP dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends suricata && \
+    apt-get install -y --no-install-recommends \
+        suricata \
+        apache2 \
+        php \
+        libapache2-mod-php \
+        git && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+# Set Apache document root and clone Suricata Watcher
+WORKDIR /var/www/html
+RUN rm -rf /var/www/html/* && \
+    git clone https://github.com/P1c1s/suricata-watcher.git .
 
 
-RUN curl -L https://raw.githubusercontent.com/netdata/netdata/master/packaging/installer/kickstart.sh | bash
+RUN chmod +x suricata.sh && ./suricata.sh
+    
 
+# Set permissions to html
+RUN chown -R www-data:www-data /var/www/html
