fixed bug samba

--- a/DockerBuild/samba/Dockerfile
+++ b/DockerBuild/samba/Dockerfile
@@ -1,6 +1,6 @@
 FROM theb0ys/base:latest
 
-# Install TAYGA (NAT64 gateway)
+# Install samba
 RUN apt-get update && \
     apt-get install -y samba && \
     apt-get clean && \
