--- a/DockerBuild/nginx/Dockerfile
+++ b/DockerBuild/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM theb0ys/base:latest
 
-# Install nginx
+# Install nginx and PHP with common modules
 RUN apt-get update && \
-    apt-get install -y nginx && \
+    apt-get install -y nginx php8.2-fpm php-mysql php-xml php-mbstring php-curl php-zip php-gd && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
