switched ecopulse and blackhoney

--- a/machines_configurations/wsa2/apache2/sites-available/000-default.conf
+++ b/machines_configurations/wsa2/apache2/sites-available/000-default.conf
@@ -7,9 +7,9 @@
 # This block defines a VirtualHost for the domain ecopulse.theboys.it
 <VirtualHost *:80>
 
-	ServerName ecopulse.theboys.it
+	ServerName blackhoney.theboys.it
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/ecopulse
+	DocumentRoot /var/www/html/blackhoney
     ErrorDocument 404 /404.html
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
