--- a/machines_configurations/nat64/tayga.conf
+++ b/machines_configurations/nat64/tayga.conf
@@ -1,10 +1,10 @@
-tun-device nat64
-ipv4-addr 193.110.0.1
-prefix 2001:db8:64:ff9b::/96
-dynamic-pool 172.17.0.128/25
-data-dir /var/db/tayga
+tun-device nat64               # Tun device for NAT64 tunneling
+ipv4-addr 172.17.0.2           # IPv4 address used for NAT64 translation
+prefix 2001:db8:64:ff9b::/96   # IPv6 prefix used for NAT64 translation
+dynamic-pool 172.17.0.128/25   # Dynamic pool for allocation of IPv4 addresses
+data-dir /var/db/tayga         # Directory for storing NAT64 data
 
-# map ipv4 to ipv6
+# Mapping IPv4 addresses to IPv6 addresses
 # Lan B
 map 172.17.0.130    2a04:0:0:1::2   # wsa1
 map 172.17.0.131    2a04:0:0:1::3   # mdb
