--- a/machines_configurations/wsa2/apache2/sites-available/000-default.conf
+++ b/machines_configurations/wsa2/apache2/sites-available/000-default.conf
@@ -55,3 +55,16 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
+
+# This block defines a VirtualHost for the domain zenglish.theboys.it
+<VirtualHost *:80>
+
+	ServerName zenglish.theboys.it
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html/zenglish
+	ErrorDocument 404 /404.html
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+</VirtualHost>
