fixed a little bug about virtualhosting

--- a/machines_configurations/wsa1/apache2/sites-available/000-default.conf
+++ b/machines_configurations/wsa1/apache2/sites-available/000-default.conf
@@ -33,7 +33,7 @@
 # This block defines a VirtualHost for the domain manager.theboys.it
 <VirtualHost *:80>
 
-	ServerName roundcube.theboys.it
+	ServerName mail.theboys.it
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/roundcube
     ErrorDocument 404 /404.html
