--- a/DockerBuild/nat64/Dockerfile
+++ b/DockerBuild/nat64/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base:latest
 
+LABEL description="This is an image for a NAT64 with TAYGA."
+
 # Install TAYGA (NAT64 gateway) and nginx-extras (for vnc 5900)
 RUN apt-get update && \
     apt-get install -y tayga nginx nginx-extras && \
