--- a/DockerBuild/openvpn/Dockerfile
+++ b/DockerBuild/openvpn/Dockerfile
@@ -1,5 +1,6 @@
-# Base image
 FROM theb0ys/base:latest
+
+LABEL description="This is an image for a VPN Server with OpenVPN."
 
 RUN apt-get update && apt-get install -y \
     openvpn \
