--- a/DockerBuild/red-hornet/Dockerfile
+++ b/DockerBuild/red-hornet/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base:latest
 
+LABEL description="This is an image for pentesting."
+
 # Install necessary packages
 RUN apt update && \
     apt install -y \
