--- a/DockerBuild/rsyslog/Dockerfile
+++ b/DockerBuild/rsyslog/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base:latest
 
+LABEL description="This is an image for a Syslog Server with RSYSLOG."
+
 # Install -..-
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
