--- a/DockerBuild/bind/Dockerfile
+++ b/DockerBuild/bind/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base:latest
 
+LABEL description="This is an image for a DNS server with BIND."
+
 # Install BIND and DNS tools
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
