--- a/DockerBuild/mariadb/Dockerfile
+++ b/DockerBuild/mariadb/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base:latest
 
+LABEL description="This is an image for a SQL server with MariaDB."
+
 # Install MariaDB
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
