--- a/DockerBuild/postfix-dovecot/Dockerfile
+++ b/DockerBuild/postfix-dovecot/Dockerfile
@@ -1,5 +1,7 @@
 FROM theb0ys/base
 
+LABEL description="This is an image for a Mail Server with POSTFIX and DOVECOT."
+
 # Install postfix and dovecot
 RUN apt update && \
     apt install -y --no-install-recommends \
